# pip-poetry-and-uv

./: PEP_standard.md  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py
tests/: test_main.py
